specified data types, added enum field to mediaType field, added lengthSeconds field to video and updated audio length to be lengthSeconds
